monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:

  name: grafana-ingress

  namespace: monitoring

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:

  ingressClassName: alb

  rules:

    - http:

        paths:

          - path: /grafana

            pathType: Prefix

            backend:

              service:

                name: monitoring-grafana

                port:

                  number: 80
